# Taiji-RNA-seq

./: README.md  Taiji-RNA-seq.cabal  stack.yaml
app/: Main.hs
src/Taiji/Pipeline/: RNASeq.hs
src/Taiji/Pipeline/RNASeq/: Classic.hs  Common.hs  Config.hs  DropSeq.hs  Functions.hs  Types.hs
src/Taiji/Pipeline/RNASeq/Classic/: Config.hs  Functions.hs
src/Taiji/Pipeline/RNASeq/DropSeq/: Config.hs  DeBarcode.hs  Functions.hs  QC.hs
