name:                Taiji-RNA-seq
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Taiji-RNA-seq#readme
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          example@example.com
copyright:           (c) 2017 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag exe
  Description: Build executable
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Taiji.Pipeline.RNASeq.Functions
                       Taiji.Pipeline.RNASeq
                       Taiji.Pipeline.RNASeq.Config
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bio-pipelines
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.5.0
                     , case-insensitive
                     , double-conversion
                     , unordered-containers
                     , SciFlow
                     , data-ordlist
                     , lens
                     , mtl
                     , singletons
                     , text
  default-language:    Haskell2010

executable taiji-rna-seq
  hs-source-dirs:      app
  if flag(exe)
    buildable: True
  else
    buildable: False
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Taiji-RNA-seq
                     , lens
                     , aeson
                     , bio-pipelines
                     , SciFlow
                     , data-default
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-RNA-seq
