name:                Taiji-RNA-seq
version:             0.2.1
homepage:            https://github.com/githubuser/Taiji-RNA-seq#readme
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2020 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag exe
  Description: Build executable
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Taiji.Pipeline.RNASeq
                       Taiji.Pipeline.RNASeq.Functions
                       Taiji.Pipeline.RNASeq.Types

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.7.0
                     , case-insensitive
                     , containers
                     , data-ordlist
                     , singletons >= 2.5
                     , shelly
                     , SciFlow >= 0.7.1
                     , text
                     , unordered-containers
                     , Taiji-utils
  default-language:    Haskell2010
  ghc-options:       -Wall
                     -fno-warn-unticked-promoted-constructors
                     -fno-warn-partial-type-signatures

executable taiji-rna-seq
  hs-source-dirs:      app
  if flag(exe)
    buildable: True
  else
    buildable: False
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Taiji-RNA-seq
                     , binary
                     , lens
                     , aeson
                     , bio-pipelines
                     , SciFlow >= 0.7.1
                     , SciFlow-app
                     , SciFlow-drmaa
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-RNA-seq
